--- a/demo/demo/demo.csproj
+++ b/demo/demo/demo.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="folder1\class1.cs" />
+    <Compile Include="folder1\class2.cs" />
+    <Compile Include="folder2\da.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
